--- a/NTU/NTU_draw.ipynb
+++ b/NTU/NTU_draw.ipynb
@@ -208,6 +208,7 @@
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -636,7 +637,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "M_0,M_1,M_01,M_10 = get_distance_matrix(p_0,p_1,C)"
@@ -722,26 +725,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(64, 325)"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "M_0.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -789,62 +772,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from transforms3d.euler import euler2mat, mat2euler\n",
-    "\n",
-    "def rotaion(p_0,p_1,R):\n",
-    "    p_0_new = np.zeros_like(p_0)\n",
-    "    p_1_new = np.zeros_like(p_1)\n",
-    "    for i,p in enumerate(p_0):\n",
-    "        p_0_new[i] = np.dot(R,p_0[i].T).T\n",
-    "    for i,p in enumerate(p_1):\n",
-    "        p_1_new[i] = np.dot(R,p_1[i].T).T\n",
-    "    return p_0_new,p_1_new\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.spatial.distance import cdist\n",
-    "def get_distance_matrix(p_0,p_1,C):\n",
-    "    M_0 = []\n",
-    "    M_1 = []\n",
-    "    M_01 = []\n",
-    "    M_10 = []\n",
-    "    iu = np.triu_indices(C.joint_n,0,C.joint_n)\n",
-    "    \n",
-    "    for f in range(C.frame_l):\n",
-    "        #distance max \n",
-    "        d_m_0 = cdist(p_0[f],p_0[f],'euclidean')\n",
-    "        d_m_1 = cdist(p_1[f],p_1[f],'euclidean')\n",
-    "        d_m_01 = cdist(p_0[f],p_1[f],'euclidean')\n",
-    "        d_m_10 = cdist(p_1[f],p_0[f],'euclidean')\n",
-    "\n",
-    "        M_0.append(d_m_0[iu])\n",
-    "        M_1.append(d_m_1[iu])\n",
-    "        M_01.append(d_m_01[iu])\n",
-    "        M_10.append(d_m_10[iu])\n",
-    " \n",
-    "    M_0 = np.stack(M_0)\n",
-    "    M_1 = np.stack(M_1)\n",
-    "    M_01 = np.stack(M_01)\n",
-    "    M_10 = np.stack(M_10)\n",
-    "    \n",
-    "    return M_0,M_1,M_01,M_10\n"
-   ]
   },
   {
    "cell_type": "code",
