correct poses_diff

--- a/JHMDB/jhmdb_1D_lite.ipynb
+++ b/JHMDB/jhmdb_1D_lite.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math\n",
@@ -37,18 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "random.seed(123)\n",
@@ -67,8 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def data_generator(T,C,le):\n",
@@ -78,7 +92,6 @@
     "    for i in tqdm(range(len(T['pose']))): \n",
     "        p = np.copy(T['pose'][i])\n",
     "        p = zoom(p,target_l=C.frame_l,joints_num=C.joint_n,joints_dim=C.joint_d)\n",
-    "        p = normlize_range(p)\n",
     "\n",
     "        label = np.zeros(C.clc_num)\n",
     "        label[le.transform(T['label'])[i]-1] = 1   \n",
@@ -104,13 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def poses_diff(x):\n",
     "    H, W = x.get_shape()[1],x.get_shape()[2]\n",
-    "    x = tf.subtract(x[:,:1,...],x[:,:-1,...])\n",
+    "    x = tf.subtract(x[:,1:,...],x[:,:-1,...])\n",
     "    x = tf.image.resize_nearest_neighbor(x,size=[H.value,W.value],align_corners=False) # should not alignment here\n",
     "    return x\n",
     "\n",
@@ -206,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -222,28 +237,28 @@
       "__________________________________________________________________________________________________\n",
       "P (InputLayer)                  (None, 32, 15, 2)    0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "model_13 (Model)                (None, 4, 128)       113056      M[0][0]                          \n",
+      "model_3 (Model)                 (None, 4, 128)       113056      M[0][0]                          \n",
       "                                                                 P[0][0]                          \n",
       "__________________________________________________________________________________________________\n",
-      "global_max_pooling1d_7 (GlobalM (None, 128)          0           model_13[1][0]                   \n",
+      "global_max_pooling1d_2 (GlobalM (None, 128)          0           model_3[1][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_19 (Dense)                (None, 128)          16384       global_max_pooling1d_7[0][0]     \n",
+      "dense_4 (Dense)                 (None, 128)          16384       global_max_pooling1d_2[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_118 (BatchN (None, 128)          512         dense_19[0][0]                   \n",
+      "batch_normalization_33 (BatchNo (None, 128)          512         dense_4[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_118 (LeakyReLU)     (None, 128)          0           batch_normalization_118[0][0]    \n",
+      "leaky_re_lu_33 (LeakyReLU)      (None, 128)          0           batch_normalization_33[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_13 (Dropout)            (None, 128)          0           leaky_re_lu_118[0][0]            \n",
+      "dropout_3 (Dropout)             (None, 128)          0           leaky_re_lu_33[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "dense_20 (Dense)                (None, 128)          16384       dropout_13[0][0]                 \n",
+      "dense_5 (Dense)                 (None, 128)          16384       dropout_3[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_119 (BatchN (None, 128)          512         dense_20[0][0]                   \n",
+      "batch_normalization_34 (BatchNo (None, 128)          512         dense_5[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_119 (LeakyReLU)     (None, 128)          0           batch_normalization_119[0][0]    \n",
+      "leaky_re_lu_34 (LeakyReLU)      (None, 128)          0           batch_normalization_34[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_14 (Dropout)            (None, 128)          0           leaky_re_lu_119[0][0]            \n",
+      "dropout_4 (Dropout)             (None, 128)          0           leaky_re_lu_34[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "dense_21 (Dense)                (None, 14)           1806        dropout_14[0][0]                 \n",
+      "dense_6 (Dense)                 (None, 14)           1806        dropout_4[0][0]                  \n",
       "==================================================================================================\n",
       "Total params: 148,654\n",
       "Trainable params: 146,862\n",
@@ -266,15 +281,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 433/433 [00:01<00:00, 281.80it/s]\n",
-      "100%|██████████| 176/176 [00:00<00:00, 300.35it/s]\n"
+      "100%|██████████| 433/433 [00:01<00:00, 243.33it/s]\n",
+      "100%|██████████| 176/176 [00:00<00:00, 292.05it/s]\n"
      ]
     }
    ],
@@ -299,12 +314,24 @@
    "outputs": [],
    "source": [
     "import keras\n",
-    "lr = 1e-4\n",
+    "lr = 1e-3\n",
+    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
+    "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=1e-5)\n",
+    "history = DD_Net.fit([X_0,X_1],Y,\n",
+    "                    batch_size=len(Y),\n",
+    "                    epochs=600,\n",
+    "                    verbose=True,\n",
+    "                    shuffle=True,\n",
+    "                    callbacks=[lrScheduler],\n",
+    "                    validation_data=([X_test_0,X_test_1],Y_test)      \n",
+    "                    )\n",
+    "\n",
+    "lr = 1e-3\n",
     "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
     "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=5e-6)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "                    batch_size=len(Y),\n",
-    "                    epochs=600,\n",
+    "                    epochs=500,\n",
     "                    verbose=True,\n",
     "                    shuffle=True,\n",
     "                    callbacks=[lrScheduler],\n",
@@ -348,15 +375,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 433/433 [00:01<00:00, 338.04it/s]\n",
-      "100%|██████████| 176/176 [00:00<00:00, 332.06it/s]\n"
+      "100%|██████████| 433/433 [00:01<00:00, 269.14it/s]\n",
+      "100%|██████████| 176/176 [00:00<00:00, 306.03it/s]\n"
      ]
     }
    ],
@@ -374,8 +401,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Re-initialize weights, since training and testing data switch\n",
@@ -393,10 +422,22 @@
     "import keras\n",
     "lr = 1e-3\n",
     "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
-    "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=5e-6)\n",
+    "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=1e-5)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "                    batch_size=len(Y),\n",
     "                    epochs=600,\n",
+    "                    verbose=True,\n",
+    "                    shuffle=True,\n",
+    "                    callbacks=[lrScheduler],\n",
+    "                    validation_data=([X_test_0,X_test_1],Y_test)      \n",
+    "                    )\n",
+    "\n",
+    "lr = 1e-3\n",
+    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
+    "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=5e-6)\n",
+    "history = DD_Net.fit([X_0,X_1],Y,\n",
+    "                    batch_size=len(Y),\n",
+    "                    epochs=500,\n",
     "                    verbose=True,\n",
     "                    shuffle=True,\n",
     "                    callbacks=[lrScheduler],\n",
@@ -440,15 +481,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 434/434 [00:01<00:00, 273.45it/s]\n",
-      "100%|██████████| 175/175 [00:00<00:00, 270.06it/s]\n"
+      "100%|██████████| 434/434 [00:01<00:00, 239.44it/s]\n",
+      "100%|██████████| 175/175 [00:00<00:00, 308.66it/s]\n"
      ]
     }
    ],
@@ -466,8 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Re-initialize weights, since training and testing data switch\n",
@@ -488,7 +531,7 @@
     "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=1e-5)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "                    batch_size=len(Y),\n",
-    "                    epochs=500,\n",
+    "                    epochs=600,\n",
     "                    verbose=True,\n",
     "                    shuffle=True,\n",
     "                    callbacks=[lrScheduler],\n",
@@ -497,7 +540,7 @@
     "\n",
     "lr = 1e-3\n",
     "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
-    "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=1e-5)\n",
+    "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=5e-6)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "                    batch_size=len(Y),\n",
     "                    epochs=500,\n",
@@ -588,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
