--- a/SHREC/SHREC_fine_1D_heavy.ipynb
+++ b/SHREC/SHREC_fine_1D_heavy.ipynb
@@ -45,18 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"5\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "random.seed(123)\n",
@@ -83,13 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def poses_diff(x):\n",
     "    H, W = x.get_shape()[1],x.get_shape()[2]\n",
-    "    x = tf.subtract(x[:,:1,...],x[:,:-1,...])\n",
+    "    x = tf.subtract(x[:,1:,...],x[:,:-1,...])\n",
     "    x = tf.image.resize_nearest_neighbor(x,size=[H.value,W.value],align_corners=False) # should not alignment here\n",
     "    return x\n",
     "\n",
@@ -166,8 +172,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_DD_Net(frame_l=32,joint_n=22,joint_d=3,feat_d=231,clc_num=14,filters=16):\n",
@@ -194,8 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -221,28 +230,28 @@
       "__________________________________________________________________________________________________\n",
       "P (InputLayer)                  (None, 32, 22, 3)    0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "model_25 (Model)                (None, 4, 512)       1740160     M[0][0]                          \n",
+      "model_1 (Model)                 (None, 4, 512)       1740160     M[0][0]                          \n",
       "                                                                 P[0][0]                          \n",
       "__________________________________________________________________________________________________\n",
-      "global_max_pooling1d_13 (Global (None, 512)          0           model_25[1][0]                   \n",
+      "global_max_pooling1d_1 (GlobalM (None, 512)          0           model_1[1][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_33 (Dense)                (None, 128)          65536       global_max_pooling1d_13[0][0]    \n",
+      "dense_1 (Dense)                 (None, 128)          65536       global_max_pooling1d_1[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_202 (BatchN (None, 128)          512         dense_33[0][0]                   \n",
+      "batch_normalization_16 (BatchNo (None, 128)          512         dense_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_202 (LeakyReLU)     (None, 128)          0           batch_normalization_202[0][0]    \n",
+      "leaky_re_lu_16 (LeakyReLU)      (None, 128)          0           batch_normalization_16[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_21 (Dropout)            (None, 128)          0           leaky_re_lu_202[0][0]            \n",
+      "dropout_1 (Dropout)             (None, 128)          0           leaky_re_lu_16[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "dense_34 (Dense)                (None, 128)          16384       dropout_21[0][0]                 \n",
+      "dense_2 (Dense)                 (None, 128)          16384       dropout_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_203 (BatchN (None, 128)          512         dense_34[0][0]                   \n",
+      "batch_normalization_17 (BatchNo (None, 128)          512         dense_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "leaky_re_lu_203 (LeakyReLU)     (None, 128)          0           batch_normalization_203[0][0]    \n",
+      "leaky_re_lu_17 (LeakyReLU)      (None, 128)          0           batch_normalization_17[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_22 (Dropout)            (None, 128)          0           leaky_re_lu_203[0][0]            \n",
+      "dropout_2 (Dropout)             (None, 128)          0           leaky_re_lu_17[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "dense_35 (Dense)                (None, 28)           3612        dropout_22[0][0]                 \n",
+      "dense_3 (Dense)                 (None, 28)           3612        dropout_2[0][0]                  \n",
       "==================================================================================================\n",
       "Total params: 1,826,716\n",
       "Trainable params: 1,821,084\n",
@@ -259,11 +268,12 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "DD_Net.load_weights('weights/fine_heavy.h5')"
+    "#DD_Net.load_weights('weights/fine_heavy.h5')"
    ]
   },
   {
@@ -275,8 +285,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Train = pickle.load(open(C.data_dir+\"train.pkl\", \"rb\"))\n",
@@ -292,19 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|▏         | 40/1960 [00:00<00:25, 75.68it/s]/home/fan/anaconda3/envs/keras/lib/python3.6/site-packages/scipy/ndimage/interpolation.py:583: UserWarning: From scipy 0.13.0, the output shape of zoom() is calculated with round() instead of int() - for these inputs the size of the returned array has changed.\n",
-      "  \"the returned array has changed.\", UserWarning)\n",
-      "100%|██████████| 1960/1960 [00:15<00:00, 128.23it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_0 = []\n",
     "X_1 = []\n",
@@ -330,19 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  9%|▉         | 77/840 [00:00<00:08, 92.72it/s]/home/fan/anaconda3/envs/keras/lib/python3.6/site-packages/scipy/ndimage/interpolation.py:583: UserWarning: From scipy 0.13.0, the output shape of zoom() is calculated with round() instead of int() - for these inputs the size of the returned array has changed.\n",
-      "  \"the returned array has changed.\", UserWarning)\n",
-      "100%|██████████| 840/840 [00:06<00:00, 124.67it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_test_0 = []\n",
     "X_test_1 = []\n",
@@ -380,7 +372,7 @@
     "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=1e-5)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "            batch_size=len(Y),\n",
-    "            epochs=400,\n",
+    "            epochs=500,\n",
     "            verbose=True,\n",
     "            shuffle=True,\n",
     "            callbacks=[lrScheduler],\n",
@@ -418,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "DD_Net.save_weights('weights/fine_heavy.h5')"
@@ -434,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lr = 1e-5\n",
@@ -445,6 +441,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -495,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Y_pred = DD_Net.predict([X_test_0,X_test_1])"
@@ -504,7 +503,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labels = ['Grab(1)','Grab(2)', 'Tap(1)', 'Tap(2)','Expand(1)', 'Expand(2)',\n",
@@ -544,7 +545,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -565,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
