--- a/JHMDB/jhmdb_1D_middle.ipynb
+++ b/JHMDB/jhmdb_1D_middle.ipynb
@@ -33,6 +33,7 @@
     "from keras.layers.core import *\n",
     "from keras.layers.convolutional import *\n",
     "from keras import backend as K\n",
+    "import keras\n",
     "import tensorflow as tf"
    ]
   },
@@ -126,7 +127,7 @@
     "def poses_diff(x):\n",
     "    H, W = x.get_shape()[1],x.get_shape()[2]\n",
     "    x = tf.subtract(x[:,1:,...],x[:,:-1,...])\n",
-    "    x = tf.image.resize_nearest_neighbor(x,size=[H.value,W.value],align_corners=False) # should not alignment here\n",
+    "    x = tf.image.resize(x,size=[H,W]) \n",
     "    return x\n",
     "\n",
     "def pose_motion(P,frame_l):\n",
@@ -309,13 +310,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import keras\n",
     "lr = 1e-4\n",
-    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
+    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=keras.optimizers.Adam(lr),metrics=['accuracy'])\n",
     "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=5e-6)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "                    batch_size=len(Y),\n",
@@ -345,8 +346,8 @@
    ],
    "source": [
     "# Plot training & validation accuracy values\n",
-    "plt.plot(history.history['acc'])\n",
-    "plt.plot(history.history['val_acc'])\n",
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])\n",
     "plt.title('Model accuracy')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.xlabel('Epoch')\n",
@@ -403,13 +404,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import keras\n",
     "lr = 1e-4\n",
-    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
+    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=keras.optimizers.Adam(lr),metrics=['accuracy'])\n",
     "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=5e-6)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "                    batch_size=len(Y),\n",
@@ -439,8 +440,8 @@
    ],
    "source": [
     "# Plot training & validation accuracy values\n",
-    "plt.plot(history.history['acc'])\n",
-    "plt.plot(history.history['val_acc'])\n",
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])\n",
     "plt.title('Model accuracy')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.xlabel('Epoch')\n",
@@ -497,13 +498,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import keras\n",
     "lr = 1e-3\n",
-    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=adam(lr),metrics=['accuracy'])\n",
+    "DD_Net.compile(loss=\"categorical_crossentropy\",optimizer=keras.optimizers.Adam(lr),metrics=['accuracy'])\n",
     "lrScheduler = keras.callbacks.ReduceLROnPlateau(monitor='loss', factor=0.5, patience=5, cooldown=5, min_lr=5e-6)\n",
     "history = DD_Net.fit([X_0,X_1],Y,\n",
     "                    batch_size=len(Y),\n",
@@ -533,8 +534,8 @@
    ],
    "source": [
     "# Plot training & validation accuracy values\n",
-    "plt.plot(history.history['acc'])\n",
-    "plt.plot(history.history['val_acc'])\n",
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])\n",
     "plt.title('Model accuracy')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.xlabel('Epoch')\n",
@@ -595,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
